--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,15 @@
     <title>이름 궁합 보기</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+
+    <!--google ads-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-1820988791076372",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <noscript>
